@@ -4,4 +4,9 @@
  <column value="getDate"/>
  <column value="getThemeTitle"/>
  <column value="published" />
+ <index name="getThemeTitle" meta_type="ZCTextIndex">
+  <indexed_attr value="getThemeTitle"/>
+  <extra name="index_type" value="Okapi BM25 Rank"/>
+  <extra name="lexicon_id" value="plone_lexicon"/>
+ </index>
 </object>
