@@ -1,4 +1,9 @@
 <?xml version="1.0"?>
 <object name="portal_catalog">
  <column value="getThemeTitle"/>
+ <index name="getThemeTitle" meta_type="ZCTextIndex">
+  <indexed_attr value="getThemeTitle"/>
+  <extra name="index_type" value="Okapi BM25 Rank"/>
+  <extra name="lexicon_id" value="plone_lexicon"/>
+ </index>
 </object>
